[package]
name = "falcon8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "~0.4.1"
num-derive = "~0.4.1"
num-traits = "~0.2.17"
pretty-hex = { version = "~0.4.0", optional = true }
rusb = "~0.9.3"
tracing = { version = "~0.1.40", optional = true, features = ["log"] }

[dev-dependencies]
ctor = "~0.2.5"
env_logger = "~0.10.1"
test-log = { version = "~0.2.13", features = ["trace"] }
tracing = { version = "~0.1.40", optional = false, features = ["log"] }
tracing-subscriber = { version = "~0.3.18", features = ["env-filter", "fmt"] }

[features]
tracing = ["dep:tracing", "dep:pretty-hex"]
all = ["tracing"]
